[project]
name = "mizu"
version = "0.1.0"
description = "Mizu RAG Pipline Works"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "gradio>=5.47.2",
    "peft>=0.17.1",
    "pi-heif>=1.1.0",
    "transformers>=4.44.0",
    "torch==2.7.0+cu128",
    "torchvision",
    "opencv-python-headless>=4.12.0.88",
    "bitsandbytes>=0.48.1"
]

[project.optional-dependencies]
ipykernel = [
    "flash-attn",
    "triton-windows>=3.4.0.post20"
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = false

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
name = "torch"
explicit = true
